Attempting to fix the alignment of the logo in the navigation section(desktop).

--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,7 @@ h1{
 .nav-logo-container{
     width: 13em;
     height: 13em;
-    margin: 0em 0em 0em auto;
+    margin: 0em 0em 0em 25%;
 
 }
 
